# Class-Conditional-CP

./: .gitignore  CHECKPOINT_MANIFEST.md  CITATION.cff  DATA_MANIFEST.md  LICENSE  README.md  RESULTS_PROVENANCE.md  ZENODO_ARCHIVE_MANIFEST.md  cas-refs.bib  environment.yml  main.tex  pyproject.toml
.github/workflows/: tests.yml
assets/: SkinCON.csv
configs/: bcn_kept_sensitivity.yaml  bcn_overlap_filter.yaml  bcn_sensitivity.yaml  duplicates_isic_bcn.yaml  isic_conf_trust.yaml  isic_resnet50_baseline.yaml  isic_resnet50_framework_inputs.yaml  isic_split_audit.yaml  overlap_isic_bcn.yaml
configs/ablations/: README.md  isic_conf_trust_method_grid.yaml  isic_full_method_grid.yaml
conformal_audit/: __init__.py  cli.py  config.py  data.py  evaluation.py
conformal_audit/audit/: __init__.py  distribution_shift.py  duplicates.py  overlap.py  splits.py
conformal_audit/features/: __init__.py  extractors.py  trust_scores.py
conformal_audit/methods/: aps.py  (+11 more)
docs/: CODE_AVAILABILITY.md  CODE_AVAILABILITY_TEMPLATE.md  DATA_AND_ARTIFACTS.md  RELEASE_CHECKLIST.md  ZENODO_ARCHIVE_MANIFEST.md
scripts/: export_bcn_framework_inputs.py  export_framework_inputs.py  generate_confusion_matrix.py  regenerate_test_predictions.py
tests/: test_audits.py  test_conf_trust_temperature.py  test_config_loader.py  test_coverage_metrics.py  test_evaluation_summary.py  test_export_bcn_framework_inputs.py  test_export_framework_inputs.py  test_methods_basic.py  test_quantiles.py  test_reporting_figures.py  test_reporting_tables.py  test_statistics_metrics.py  test_stratified_metrics.py
(+61 files in other folders)
