[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "conformal-biomedical-cp-framework"
version = "0.1.0"
description = "Reproducible evaluation framework for class-conditional conformal prediction in imbalanced biomedical image classification."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Sadeeq O. Bello"},
  {name = "Tiago A. Almeida"}
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "pillow"
]

[project.optional-dependencies]
test = ["pytest"]
export = ["torch", "torchvision", "tqdm"]

[tool.setuptools.packages.find]
include = ["conformal_audit*"]
